# csdc-compiler

./: .gitignore  CSDC.cf  csdc-compiler.cabal  default.nix  generate-closure  generate-parser  grammar.t2t  shell.nix  tools.nix
app/: CLI.hs  Result.hs  Web.hs
src/CSDC/: Compiler.hs  Declaration.hs  Definition.hs  Parser.hs  Pretty.hs
src/CSDC/Parser/: AbsCSDC.hs  ErrM.hs  LexCSDC.x  ParCSDC.y
src/CSDC/Types/: Annotated.hs  Choice.hs  Name.hs  Record.hs  Tree.hs
